Edit Blog Styles

--- a/css/elements/_tables.css
+++ b/css/elements/_tables.css
@@ -3,7 +3,7 @@
 table {
   border-collapse: collapse;
   margin-bottom: 1.4rem;
-  overflow-wrap: break-word;
+  overflow-wrap: normal;
 }
 
 /* Table cells */
