--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -13,14 +13,6 @@
     @apply m-0 mb-1 lg:mb-2 font-sans;
   }
 
-  .blog-post__body * {
-    @apply m-0 mb-1 lg:mb-2 font-sans;
-  }
-
-  .blog-post__body a {
-    @apply font-bold text-darkPurple cursor-pointer;
-  }
-
   h1,
   .h1 {
     @apply text-[40px] lg:text-h1;
@@ -70,6 +62,31 @@
   .hs_cos_wrapper_type_rich_text a {
     @apply font-bold text-darkPurple;
   }
+
+  .blog-post__body * {
+    @apply m-0 font-sans mb-0.5;
+  }
+
+  .blog-post__body a {
+    @apply font-bold text-darkPurple cursor-pointer;
+  }
+
+  .blog-post__body h2,
+  .blog-post__body h3,
+  .blog-post__body h4,
+  .blog-post__body h5,
+  .blog-post__body h6 {
+    @apply relative after:absolute after:w-full after:h-[4px] sm:after:w-[30%] sm:after:h-[5px] after:left-0 after:-bottom-1 after:bg-purpleGradient;
+  }
+
+  .blog-post__body h2 {
+    @apply text-2xl lg:text-h2 font-normal lg:font-normal leading-1;
+  }
+
+  .blog-post__body h3 {
+    @apply text-xl lg:text-h4 font-normal;
+  }
+
 }
 
 @layer components {
